--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,43 +1,40 @@
 {
+  "extends": ["airbnb", "plugin:prettier/recommended", "prettier/react"],
   "env": {
     "browser": true,
-    "node": true,
+    "commonjs": true,
     "es6": true,
     "jest": true,
-    "jquery": true
+    "node": true
   },
-  "parser": "babel-eslint",
-  "parserOptions": {
-    "ecmaVersion": 6,
-    "sourceType": "module",
-    "ecmaFeatures": {
-      "arrowFunctions": true,
-      "binaryLiterals": true,
-      "blockBindings": true,
-      "classes": true,
-      "defaultParams": true,
-      "destructuring": true,
-      "forOf": true,
-      "generators": true,
-      "modules": true,
-      "objectLiteralComputedProperties": true,
-      "objectLiteralDuplicateProperties": true,
-      "objectLiteralShorthandMethods": true,
-      "objectLiteralShorthandProperties": true,
-      "octalLiterals": true,
-      "regexUFlag": true,
-      "regexYFlag": true,
-      "spread": true,
-      "superInFunctions": true,
-      "templateStrings": true,
-      "unicodeCodePointEscapes": true,
-      "globalReturn": true,
-      "jsx": true,
-      "experimentalObjectRestSpread": true
-    }
-  },
-  "plugins": ["react"],
   "rules": {
-    "strict": 0
+    "jsx-a11y/href-no-hash": ["off"],
+    "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx"] }],
+    "react/jsx-sort-props": [
+      "warn",
+      {
+        "callbacksLast": true,
+        "shorthandFirst": true,
+        "noSortAlphabetically": false,
+        "reservedFirst": true
+      }
+    ],
+    // "react/sort-prop-types": [
+    //   "warn",
+    //   {
+    //     "callbacksLast": true,
+    //     "ignoreCase": false,
+    //     "requiredFirst": true,
+    //     "sortShapeProp": true,
+    //     "noSortAlphabetically": false
+    //   }
+    // ],
+    // "react/jsx-sort-default-props": [
+    //   "warn",
+    //   {
+    //     "ignoreCase": false
+    //   }
+    // ],
+    "react/jsx-props-no-spreading": ["off"]
   }
 }
