--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "attire",
+  "name": "brightigo",
   "version": "1.0.0",
-  "description": "Boilerplate to build a full stack web application using React, Node.js, Express and Webpack.",
+  "description": "React App",
   "main": "src/server/index.js",
   "scripts": {
     "build": "webpack --mode production",
@@ -53,7 +53,7 @@
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
     "url-loader": "^4.1.1",
-    "webpack": "^5.66.0",
+    "webpack": "^5.67.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.3"
   }
