--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
     "@emailjs/browser": "^3.4.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@fontsource/poppins": "^4.5.0",
+    "@fontsource/playfair-display": "^4.5.1",
+    "@fontsource/work-sans": "^4.5.2",
     "babel-polyfill": "^6.26.0",
+    "circletype": "^2.3.0",
+    "cors": "^2.8.5",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "framer-motion": "^5.6.0",
+    "mongoose": "^6.1.7",
+    "morgan": "^1.10.0",
     "react": "^17.0.2",
     "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
