--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Irfan",
   "license": "ISC",
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.7.4",
     "@emailjs/browser": "^3.4.0",
     "@emotion/react": "^11.7.1",
@@ -20,17 +21,22 @@
     "@fontsource/playfair-display": "^4.5.1",
     "@fontsource/work-sans": "^4.5.2",
     "babel-polyfill": "^6.26.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.1",
     "circletype": "^2.3.0",
     "cors": "^2.8.5",
-    "dotenv": "^14.2.0",
+    "dotenv": "^14.3.0",
     "express": "^4.17.2",
     "framer-motion": "^5.6.0",
-    "mongoose": "^6.1.7",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
+    "mongoose": "^6.1.8",
     "morgan": "^1.10.0",
     "react": "^17.0.2",
     "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.24.1",
+    "react-google-login": "^5.2.2",
+    "react-hook-form": "^7.25.0",
     "react-icons": "^4.3.1",
     "react-intersection-observer": "^8.33.1",
     "react-router-dom": "^6.2.1",
