--- a/package.json
+++ b/package.json
@@ -20,18 +20,34 @@
     "@emotion/styled": "^11.6.0",
     "@fontsource/playfair-display": "^4.5.1",
     "@fontsource/work-sans": "^4.5.2",
+    "@hookform/resolvers": "^2.8.8",
+    "axios": "^0.25.0",
     "babel-polyfill": "^6.26.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
     "circletype": "^2.3.0",
     "cors": "^2.8.5",
     "dotenv": "^14.3.0",
+    "dotenv-webpack": "^7.0.3",
     "express": "^4.17.2",
+    "express-jwt": "^6.1.0",
+    "express-validator": "^6.14.0",
     "framer-motion": "^5.6.0",
+    "google-auth-library": "^7.11.0",
+    "google-oauth-jwt": "^0.2.0",
+    "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
+    "loadash": "^1.0.0",
+    "mailgun-js": "^0.22.0",
+    "mailgun.js": "^4.1.6",
     "mongoose": "^6.1.8",
     "morgan": "^1.10.0",
+    "node-fetch": "^3.2.0",
+    "node-polyfill-webpack-plugin": "^1.1.4",
+    "passport": "^0.5.2",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.0",
     "react": "^17.0.2",
     "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
@@ -40,7 +56,8 @@
     "react-icons": "^4.3.1",
     "react-intersection-observer": "^8.33.1",
     "react-router-dom": "^6.2.1",
-    "react-slick": "^0.28.1"
+    "react-slick": "^0.28.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
