--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react": "^17.0.2",
     "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.5.3",
     "react-google-login": "^5.2.2",
     "react-hook-form": "^7.25.0",
     "react-icons": "^4.3.1",
