--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
     "circletype": "^2.3.0",
+    "cloudinary": "^1.28.1",
     "cors": "^2.8.5",
     "dotenv": "^14.3.0",
     "dotenv-webpack": "^7.0.3",
